tests/negative/gold/missing_name_test.gold
tests/negative/missing_name_test.toit:3:1: error: Invalid name for declaration
4
^
tests/negative/missing_name_test.toit:4:3: warning: Unusual indentation for parameter
  unresolved
  ^~~~~~~~~~
tests/negative/missing_name_test.toit:6:1: error: Expected name of declaration
:
^
tests/negative/missing_name_test.toit:9:1: error: Invalid name for declaration
(499 + 33 + unresolved)
^
tests/negative/missing_name_test.toit:9:2: error: Unexpected token: <integer>
(499 + 33 + unresolved)
 ^~~
tests/negative/missing_name_test.toit:12:3: error: Invalid name for declaration
  4
  ^
tests/negative/missing_name_test.toit:13:5: warning: Unusual indentation for parameter
    unresolved
    ^~~~~~~~~~
tests/negative/missing_name_test.toit:15:3: error: Expected name of declaration
  :
  ^
tests/negative/missing_name_test.toit:18:3: error: Invalid name for declaration
  (499 + 33 + unresolved)
  ^
tests/negative/missing_name_test.toit:18:4: error: Unexpected token: <integer>
  (499 + 33 + unresolved)
   ^~~
tests/negative/missing_name_test.toit:20:11: error: Expected name of declaration
  abstract  // comment
          ^~~~~~~~~~~~
tests/negative/missing_name_test.toit:21:9: error: Expected name of declaration
  static    // comment
        ^~~~~~~~~~~~~~
tests/negative/missing_name_test.toit:22:11: error: Expected name of declaration
  abstract  /* comment
          ^
tests/negative/missing_name_test.toit:24:9: error: Expected name of declaration
  static    /* comment
        ^
tests/negative/missing_name_test.toit:3:1: error: Missing body
4
^
tests/negative/missing_name_test.toit:9:1: error: Missing body
(499 + 33 + unresolved)
^
tests/negative/missing_name_test.toit:12:3: error: Missing body
  4
  ^
tests/negative/missing_name_test.toit:18:3: error: Missing body
  (499 + 33 + unresolved)
  ^
tests/negative/missing_name_test.toit:20:11: error: Members can't be abstract in non-abstract class
  abstract  // comment
          ^~~~~~~~~~~~
tests/negative/missing_name_test.toit:21:9: error: Missing body
  static    // comment
        ^~~~~~~~~~~~~~
tests/negative/missing_name_test.toit:22:11: error: Members can't be abstract in non-abstract class
  abstract  /* comment
          ^
tests/negative/missing_name_test.toit:24:9: error: Missing body
  static    /* comment
        ^
tests/negative/missing_name_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/missing_name_test.toit:28:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/missing_name_test.toit:29:10: error: Unresolved identifier: 'unresolved'
  a := A unresolved
         ^~~~~~~~~~
tests/negative/missing_name_test.toit:29:8: error: Argument mismatch for 'A'
Method does not take any arguments, but one was provided
  a := A unresolved
       ^
tests/negative/missing_name_test.toit:16:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed.
